# neurovista

./: .cz.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  mkdocs.yml  pyproject.toml  tox.ini  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dev-docs.yml  dev.yml  release.yml  test-release.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/api/: index.html
0.1/changelog/: index.html
0.1/contributing/: index.html
0.1/installation/: index.html
0.1/reference/reference/: index.html
0.1/search/: search_index.json
0.1/usage/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/: index.html
dev/changelog/: index.html
dev/contributing/: index.html
dev/installation/: index.html
dev/reference/reference/: index.html
dev/search/: search_index.json
dev/usage/: index.html
docs/: api.md  changelog.md  contributing.md  index.md  installation.md  usage.md
docs/reference/: reference.md
examples/: test.py
neurovista/: __init__.py  neurovista.py  utils.py
neurovista/navis/: __init__.py  navis.py
tests/: __init__.py  test_neurovista.py
